# tinyweb

./: .release-please-manifest.json  Cargo.toml  README.md  flake.nix  release-please-config.json
.config/: rail.toml
.github/workflows/: ci.yml  release.yml
crates/tinyweb/: CHANGELOG.md  Cargo.toml
crates/tinyweb-compio/: CHANGELOG.md  Cargo.toml
crates/tinyweb-compio/src/: lib.rs  runtime.rs
crates/tinyweb-compio/src/incoming/: mod.rs  tcp.rs  unix.rs
crates/tinyweb-core/: CHANGELOG.md  Cargo.toml
crates/tinyweb-core/src/: body.rs  error.rs  extract.rs  handler.rs  incoming.rs  io.rs  layer.rs  lib.rs  maybe_send.rs  response.rs  router.rs  runtime.rs  server.rs  service.rs
crates/tinyweb-core/src/extract/: body.rs  json.rs  mod.rs  parts.rs
crates/tinyweb-core/src/handler/: erased.rs
crates/tinyweb-tokio/: CHANGELOG.md  Cargo.toml
crates/tinyweb-tokio/src/: io_compat.rs  lib.rs  runtime.rs
crates/tinyweb-tokio/src/incoming/: mod.rs  tcp.rs  unix.rs
crates/tinyweb/examples/: hello.rs  middleware.rs
crates/tinyweb/src/: io.rs  lib.rs  server.rs
src/: body.rs  extract.rs  lib.rs  response.rs  router.rs  server.rs
src/handler/: erased.rs
src/rt/: mod.rs
