[workspace]
members = ["crates/*"]
default-members = [
  "crates/tinyweb-core",
  "crates/tinyweb-tokio",
  "crates/tinyweb",
]
resolver = "3"

[workspace.dependencies]
bytes = "^1.11.1" #unified
h2 = { version = "^0.4.13", features = ["stream"] } #unified
http = "^1.4.0" #unified
tinyweb-compio = { path = "crates/tinyweb-compio", version = "^0.1.0" } #unified
tinyweb-core = { path = "crates/tinyweb-core", version = "^0.1.0" } #unified
tinyweb-tokio = { path = "crates/tinyweb-tokio", version = "^0.1.0" } #unified
tokio = { version = "^1.50.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] } #unified

[workspace.package]
rust-version = "1.87.0"
