[package]
name = "tinyweb-core"
version = "0.1.0"
edition = "2024"

[features]
send = []

[dependencies]
bytes = { workspace = true } #unified
futures-core = "0.3"
futures-io = "0.3"
h2 = { workspace = true } #unified
http = { workspace = true } #unified
matchit = "0.9"
serde = "1"
serde_json = "1"
