[package]
name = "tinyweb"
version = "0.1.0"
edition = "2024"

[features]
send = ["tinyweb-core/send"]
tokio = ["dep:tinyweb-tokio", "send"]
compio = ["dep:tinyweb-compio"]

[dependencies]
tinyweb-core = { path = "../tinyweb-core" }
tinyweb-tokio = { path = "../tinyweb-tokio", optional = true }
tinyweb-compio = { path = "../tinyweb-compio", optional = true }
bytes = "1"
futures-core = "0.3"
futures-io = "0.3"
h2 = { version = "0.4", features = ["stream"] }
http = "1"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[[example]]
name = "hello"
required-features = ["tokio"]

[[example]]
name = "middleware"
required-features = ["tokio"]
