[package]
name = "tinyweb"
version = "0.2.0"
edition = "2024"

[features]
send = ["tinyweb-core/send"]
tokio = ["dep:tinyweb-tokio", "send"]
compio = ["dep:tinyweb-compio"]

[dependencies]
bytes = { workspace = true } #unified
futures-core = "0.3"
futures-io = "0.3"
h2 = { workspace = true } #unified
http = { workspace = true } #unified
pin-project-lite = "0.2"
tinyweb-compio = { workspace = true, optional = true } #unified
tinyweb-core = { workspace = true } #unified
tinyweb-tokio = { workspace = true, optional = true } #unified
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread"] } #unified

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "rt"] } #unified

[[example]]
name = "hello"
required-features = ["tokio"]

[[example]]
name = "middleware"
required-features = ["tokio"]
